Correcting for delete Set.of();